--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -140,4 +140,10 @@ body{
     font-weight: 500;
     margin-left: 1rem;
 }
+p{
+    font-size: 4rem;
+    color:#fff;
+    text-align: center;
+    margin-bottom: 2rem;
+}
 
